--- a/TODO
+++ b/TODO
@@ -1,12 +1,6 @@
 TODO:
-    - Ver tipos de binários para as instruções
-    - Ver diferença entre imediato e offset
-    - Trocar offsets por labels
-    - Implementar labels
-    - Programa é um vetor de inteiros
+    - Fazer verificação de labels
 
-Tipos:
-    - Totalmente à direita (todos com apenas registradores e syscall)
-    - Totalmente à esquerda (todos com imediato menos bgez/bltz)
-    - No meio (entre bts 16 e 20) (bgez/bltz)
-    - nop = 0
+Problemas:
+    - Offset shift (18bits)
+    - Instrução J é diferente
