--- a/TODO
+++ b/TODO
@@ -2,3 +2,11 @@ TODO:
     - Ler o nome do program AKA ler o nome do arquivo de entrada até o ponto '.'
     - Fazer arquivo de saída final
     - Estruturas para previsão de desvio: localização do salto, atualização da bht ao verificar o salto de fato
+
+Problemas:
+    - Entendimento do pipeline no geral: de escalar para super escalar
+    - O que deve utilizar o manual?
+        - Exemplo: Estágio de instrução apenas busca a instrução (escalar), com PD deve decodificar?
+    - O que é Instruction adress calculation
+    - Quais barramentos precisam existir
+    - https://www.google.com/search?q=mips32+4k+diagram&source=lnms&tbm=isch&sa=X&ved=0ahUKEwigxIfSvsvhAhWEH7kGHVnvDC4Q_AUIDigB&biw=1440&bih=828#imgrc=dqFvqhFkVqpfxM:
