--- a/TODO
+++ b/TODO
@@ -7,6 +7,9 @@ Problemas:
     - Entendimento do pipeline no geral: de escalar para super escalar
     - O que deve utilizar o manual?
         - Exemplo: Estágio de instrução apenas busca a instrução (escalar), com PD deve decodificar?
+            R: Fazer modificações necessárias, o que deve ser definido pelo manual é apenas a ideia dos estágios
     - O que é Instruction adress calculation
+        R: Só para load/store
     - Quais barramentos precisam existir
+        R: Conexões podem ser diretas
     - https://www.google.com/search?q=mips32+4k+diagram&source=lnms&tbm=isch&sa=X&ved=0ahUKEwigxIfSvsvhAhWEH7kGHVnvDC4Q_AUIDigB&biw=1440&bih=828#imgrc=dqFvqhFkVqpfxM:
