--- a/TODO
+++ b/TODO
@@ -1,6 +1,8 @@
 TODO:
-    - Ler o nome do program AKA ler o nome do arquivo de entrada até o ponto '.'
-    - Fazer arquivo de saída final
+      - Fazer arquivo de saída final
+      - Colocar prints na ordem
+      - Fazer arquivos de entrada ~anderson/Lab3.pdf
+
 
 Problemas:
     Executar a instrução no mesmo ciclo que emite ou só no próximo?
